2005-11-20 Arwed v. Merkatz <v.merkatz@gmx.net>
	* shared-ffmpeg.patch: updated so it applies to the latest cvs again

2005-11-10 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DEPENDS: added optional_depends on libmpcdec to the cvs version

2005-09-29 Arwed v. Merkatz <v.merkatz@gmx.net>
	* PREPARE, CONFIGURE: use values of the old variables as defaults for
	  the new ones so user choices don't get lost

2005-09-24 Arwed v. Merkatz <v.merkatz@gmx.net>
	* PREPARE, DETAILS: updated to multi-version standard
	* CONFIGURE, DEPENDS: prefix variables with MPLAYER, support choice
	  between gtk+ and gtk+2 for the gui in the cvs version
	* BUILD: use new variables, removed gcc 3.3 mp3lib hack, changed
	  confdir to use $TRACK_ROOT instead of $INSTALL_ROOT
	* FINAL: removed the dispel MPlayer-gui hack
	* DEPENDS, DETAILS: only use gcc 3.4 for release version, not cvs
	* DEPENDS: changed configure options for libvorbis
	* BUILD, PRE_BUILD: moved patching to PRE_BUILD

2005-09-02 Flavien Bridault <disk@sourcemage.org>
	* DETAILS: Corrected SOURCE_URL[0], added two more

2005-08-27 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated to 1.0pre7try2

2005-06-03 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD: only apply mplayer-headers.patch to non cvs version

2005-05-11 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD: add --cc=gcc to OPTS, otherwise cvs mplayer tries to compile
	  with gcc 4.0 which breaks badly

2005-05-01 Arwed v. Merkatz <v.merkatz@gmx.net>
	* shared-ffmpeg.patch: added another fix to make cvs mplayer compile
	  again (ae_lavc.c not getting compiled)

2005-04-23 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD, DEPENDS, DETAILS: use gcc 3.4

2005-04-20 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD, INSTALL, FINAL: use $INSTALL_ROOT

2005-04-20 Thomas Houssin <Thomas.Houssin@sourcemage.org>
	* DETAILS: updated to 1.0pre7

2005-02-28 Eric Sandall <eric@sandall.us>
	* CONFLICTS: Removed conflicting spell

2005-01-30 Arjan Bouter <abouter@sourcemage.org>