@@ -2,7 +2,15 @@ default_pre_build      &&
 cd  $SOURCE_DIRECTORY  &&
 patch  Makefile  $SCRIPT_DIRECTORY/Makefile.patch  &&
 if [ "$MPLAYER_CVS" = "y" ]; then
-  patch -p1 < $SCRIPT_DIRECTORY/shared-ffmpeg.patch
+  patch -p1 < $SCRIPT_DIRECTORY/shared-ffmpeg.patch  &&
+  
+  if  [ "$MPLAYER_GUI" == "gtk+" ]; then
+    sedit "s|_gui=no|_gui=yes|" configure    &&
+    sedit "s|_gtk1=no|_gtk1=yes|" configure
+  elif  [ "$MPLAYER_GUI" == "gtk+2" ]; then
+    sedit "s|_gui=no|_gui=yes|" configure
+  fi                                         
+
 else
   # fixes bug #6833
   patch  -p1  <  $SCRIPT_DIRECTORY/mplayer-headers.patch
